# life-rs

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
